[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vault-tcp"
version = "0.1.0"
description = "Secure TCP communication using the Noise Protocol Framework"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "noiseprotocol>=0.3.1",
    "cryptography>=41.0.0",
    "psygnal>=0.10",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=7.4",
    "pytest-timeout>=2.1",
    "pre-commit>=3.7",
]

[tool.setuptools]
py-modules = ["vault_tcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
mypy_path = "stubs"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
